# BinASM

./: .gitignore  CMakeLists.txt  FONTS.md  README.md  build.bat  build.sh
libs/ImGuiColorTextEdit/: TextEditor.h
src/: app_state.cpp  app_state.h  decompiler.cpp  decompiler.h  disassembler.cpp  disassembler.h  editor_tab.cpp  editor_tab.h  fonts.cpp  fonts.h  hex_editor.cpp  hex_editor.h  hover_provider.cpp  hover_provider.h  isa.h  main.cpp  memory_grid.cpp  memory_grid.h  panel_cfg.cpp  panel_cfg.h  panel_cheatsheet.cpp  panel_cheatsheet.h  panel_console.cpp  panel_console.h  panel_debug_assist.cpp  panel_debug_assist.h  panel_decompiled.cpp  panel_decompiled.h  panel_disasm.cpp  panel_disasm.h  panel_editor.cpp  panel_editor.h  panel_explorer.cpp  panel_explorer.h  panel_macro.cpp  panel_macro.h  panel_statusbar.cpp  panel_statusbar.h  panel_vm_state.cpp  panel_vm_state.h  (+11 more)
